update api get all term & get all type term